# weathers

./: .gitignore  Cargo.toml  flake.nix  roadmap.md
src/: argparser.rs  main.rs
src/domain/: coordinates.rs  mod.rs  yr.rs
src/domain/yr/: mod.rs  response.rs  weatherapi.rs
src/forecast/: forecastargs.rs  mod.rs
