[package]
name = "weathers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
reqwest = "0.12.12"
serde = "1.0.217"
tokio = { version = "1", features = ["full"] }

[lib]
name = "weathers"
path = "src/lib.rs"
