[package]
name = "weathers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"

[lib]
name = "weathers"
path = "src/lib.rs"
